syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message Address {
  string countryId = 1;
  string cityId = 2;
  string districtId = 3;
  string detail = 4;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  Address address = 3;
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  Address address = 4;
}

message DeleteUserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  Address address = 4;
  string createdAt = 5;
}

message DeleteUserResponse {
  bool success = 1;
}