syntax = "proto3";
package user;
service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUser (UserIdRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (UserIdRequest) returns (DeleteUserResponse);
}
message UserIdRequest { string id = 1; }
message CreateUserRequest { string email = 1; string password = 2; string first_name = 3; string last_name = 4; string phone = 5; }
message UpdateUserRequest { string id = 1; string first_name = 2; string last_name = 3; string phone = 4; }
message UserResponse { string id = 1; string email = 2; string first_name = 3; string last_name = 4; string phone = 5; }
message DeleteUserResponse { bool success = 1; }
